--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- source jquery -->
-    <!-- source client.js -->
-    <!-- source server.js -->
+    <script src="./vendors/jquery.js"></script>
+    <script src="./scripts/client.js"></script>
+    <!-- <script src="../server.js"></script> -->
     <title>Labor Day Weekend!</title>
 </head>
 <body>
     <h1>Calculator</h1>
-    <input />
+    <input type="number" />
     <button>+</button>
     <button>-</button>
     <button>*</button>
     <button>/</button>
-    <input />
-    <button>/</button>
+    <input type="number" />
+    <button class="equalButton">=</button>
     <button>C</button>
 
     <h2>Answer</h2>
