server has fields

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./vendors/jquery.js"></script>
     <script src="./scripts/client.js"></script>
-    <!-- <script src="../server.js"></script> -->
     <title>Labor Day Weekend!</title>
 </head>
 <body>
     <h1>Calculator</h1>
-    <input type="number" />
+    <input class="fieldOne" type="number" />
     <button>+</button>
     <button>-</button>
     <button>*</button>
     <button>/</button>
-    <input type="number" />
+    <input class="fieldTwo" type="number" />
     <button class="equalButton">=</button>
     <button>C</button>
 
