server has fields

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,13 +10,13 @@
 <body>
     <h1>Calculator</h1>
     <input class="fieldOne" type="number" />
-    <button>+</button>
-    <button>-</button>
-    <button>*</button>
-    <button>/</button>
+    <button class="additionButton">+</button>
+    <button class="subtractionButton">-</button>
+    <button class="multiplicationButton">*</button>
+    <button class="divisionButton">/</button>
     <input class="fieldTwo" type="number" />
     <button class="equalButton">=</button>
-    <button>C</button>
+    <button class="clearButton">C</button>
 
     <h2>Answer</h2>
     <li>history</li>
