base done but clear btn, change operator to signs

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,7 +19,8 @@
     <button class="clearButton">C</button>
 
     <h2>Answer</h2>
-    <li>history</li>
-
+    <ul class="history">
+        
+    </ul>
 </body>
 </html>
