--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,7 +18,7 @@
     <button class="equalButton">=</button>
     <button class="clearButton">C</button>
 
-    <h2>Answer</h2>
+    <h2 class="answer">Answer</h2>
     <ul class="history">
         
     </ul>
